refactor: :sparkles: add new calculator

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="img/jpg" href="/freeCodeCamp-logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calculator freeCodeCamp</title>
+  <title>Calculator basic</title>
 </head>
 
 <body>
